# hangeul

./: .gitignore  pyproject.toml
app/: config.py  main.py  models.py  session_store.py
app/api/: routes.py
app/graph/: graph.py  state.py
app/graph/nodes/: form_parser.py  generator.py  material_ingestor.py  planner.py  question.py  renderer.py  router.py  verifier.py
app/llm/: solar_client.py
app/llm/prompts/: generator.txt  planner.txt  router.txt  summarizer.txt  verifier.txt
app/parsers/: hwpx_parser.py  hwpx_renderer.py  material_ingestor.py
app/pii/: masker.py  presidio_masker.py  regex_masker.py
frontend/: api_client.py  app.py
tests/: conftest.py  test_api_routes.py  test_form_parser_node.py  test_generator_node.py  test_graph_skeleton.py  test_hwpx_parser.py  test_hwpx_renderer.py  test_material_ingestor.py  test_material_ingestor_node.py  test_pii_masker.py  test_pii_regex.py  test_planner_node.py  test_question_node.py  test_renderer_node.py  test_router_node.py  test_session_store.py  test_solar_client.py  test_verifier_node.py
tests/fixtures/: docx_factory.py  hwpx_factory.py
